
	* CYGWIN-PATCHES/README:
	* lib/Makefile.am:
	* lib/bzr.cygclass: New cygclass for Bazaar-VCS checkout packages.

	* lib/apache.cygclass (doapachemod): New command.
	* lib/gtkmm.cygclass: Ignore MSVC_Net2003 during diff.
	* lib/java.cygclass: Define JAVA_HOME.

	* lib/mono.cygclass (mono_wrapper): Allow full path to wrapper.

	* bin/cygport.in (cygpatch): Accept {g,bz}ipped patches.
	(cygconf): Remove files in S that will be recreated by configure in B.
	(__prepstrip): Don't 'chmod +x' .NET assemblies.
	(__pkg_diff): Ignore .spec files.

	* lib/python.cygclass: Provide default HOMEPAGE and SRC_URI at cheeseshop.
	(python_optimize) Inform of action instead of showing output.

	* data/mirrors (mirror_mplayer): Added.

	* lib/cvs.cygclass:
	* lib/git.cygclass:
	* lib/svn.cygclass: Redefine, not append, SRC_URI.
	(svn_fetch): Ignore .cvsignore files found in cvs2svn repos.

	* bin/cygport.in: Index mutable, public, and private symbols in 
	each section. Added double-underscore prefix to some private functions.

	* bin/cygport.in:
	* lib/cvs.cygclass:
	* lib/git.cygclass:
	* lib/svn.cygclass:
	Reworked src_fetch and RCS_fetch to allow RCS and FTP/HTTP in SRC_URI.
	Renamed former to __src_fetch as private API.

	* CYGWIN-PATCHES/README:
	* lib/Makefile.am:
	* lib/zope.cygclass: New cygclass for Zope modular libraries.

	* lib/java.cygclass (dojar): Renamed command.
	(dojava): Alias to dojar.
	(dojavadoc, java_wrapper): New install helpers.

	* lib/mono.cygclass (dogac): New helper command for gacutil installation.

	* bin/cygport.in (cyginstall): Redefine exec_prefix for USE_DESTDIR=0.
	(pkg_diff): Exclude .stackdump files by default.

	* bin/prep_scrollkeeper_omf.sh: Improve postinstall and add preremove.

	* CYGWIN-PATCHES/README:
	* configure.ac:
	Post-release version bump.

*** 0.3.0 ***

	* bin/cygport.in (fetch): Remove tarball placeholder if download fails.

	* test/Makefile.am (clean-local):
	Remove bootstrap workdir, in case make check was interrupted.
